# ffmpeg-leaning

./: AVCodec.md  AVCodecContext.md  AVFormatContext.md  AVFrame.md  AVIOContext.md  AVInputFormat.md  AVPacket.md  AVStream.md  Android JNI.md  Android_Input.md  Android_Native异常定位.md  Android媒体框架总结.md  C++进阶课程讲义_v1.0.5.docx  Clion-mac版引入FFmpeg库.md  C提高讲义.docx  MediaPlayer_setDataSource.md  Native_Handler.md  PMWeeklyDiary.md  Think.md  Thread_java.md  YUV格式.md  binder.md  build_android.sh  class_relationship.md  git_bug.md  test.txt  人类简史-从智人到神人.md  单例模式.md  她.md  智能指针_轻量指针.md
Android_Framework层评分机制/: Android媒体播放器评分机制.md  nuplayer.mdj  评分机制.mdj
FFmpeg/app/: CMakeLists.txt  build.gradle
FFmpeg/app/src/androidTest/java/com/kiven/heli/ffmpeg/: ExampleInstrumentedTest.java
FFmpeg/app/src/main/: AndroidManifest.xml
FFmpeg/app/src/main/cpp/: player.cpp
FFmpeg/app/src/main/java/com/kiven/heli/ffmpeg/: FFmpegPlayer.java  MainActivity.java
FFmpeg/app/src/test/java/com/kiven/heli/ffmpeg/: ExampleUnitTest.java
FFmpeg/gradle/wrapper/: gradle-wrapper.properties
GOF/: gof.md  gof23.mdj
Her/: 2018-10-27-反光的玻璃.md
NuPlayer/: NuPlyaer.md  nuplayer.mdj
Qt/透明Widget绘画/: Qt实现在桌面作画的效果.md  TransparentWidget.rar
TS格式/: PSI_SI.md  TS流.md
addr2line/: Android_Native异常定位.md
image/: FFmpeg.mdj
mp4/: Mp4格式分析.md
opengl/: Mac_OpenGL的坑.md
pcm/: PCM.md
play_ffmpeg/play_ffmpeg_show_video/: FFmpeg播放器（一）：FFmpeg+SDL2播放视频数据.md
play_ffmpeg/play_ffmpeg_show_video/PlayFFmpeg/: CMakeLists.txt  main.cpp
python/pip_matplot/: pip.md
script/: build_android.sh
sdl/: hello_sdl.md  sdl_BlitSurace_UpdateWindowSurface.md  sdl_Event.md  sdl_error.md  sdl_init.md  sdl_render.md  sdl_surface.md  sdl_texture.md  sdl_window.md  tmp.md
sdl/sdl_practic_1/: hello_sdl.md
sdl/sdl_practic_1/PlaySDL/: CMakeLists.txt  main.cpp
sdl/sdl_practic_2/: SLD_show_bmp.md
sdl/sdl_practic_2/PlaySDL/: main.cpp
sdl/sdl_practic_3/: SDL_show_image.md
sdl/sdl_practic_3/PlaySDL/: CMakeLists.txt  main.cpp
sdl/sdl_practic_4/: little_prince_yuv420p_960x540.yuv  little_prince_yv21_960x540.yuv  sdl_show_yuv.md
sdl/sdl_practic_4/PlaySDL/: main.cpp
sdl/sdl_practic_5_pcm/: play_sdl_pcm.md
temp/AndroidHost2PC/app/: build.gradle
temp/AndroidHost2PC/app/src/androidTest/java/com/example/heli/androidhost2pc/: ExampleInstrumentedTest.java
temp/AndroidHost2PC/app/src/main/: AndroidManifest.xml
temp/AndroidHost2PC/app/src/main/java/com/example/heli/androidhost2pc/: FileHelper.java  MainActivity.java  MyUtil.java  testPcClient.java
temp/AndroidHost2PC/app/src/main/java/com/example/heli/androidhost2pc/service/: ConnectService.java  ServiceBroadcastReceiver.java  ThreadReadWriterIOSocket.java
temp/AndroidHost2PC/app/src/main/res/values/: strings.xml
temp/AndroidHost2PC/app/src/test/java/com/example/heli/androidhost2pc/: ExampleUnitTest.java
temp/AndroidHost2PC/gradle/wrapper/: gradle-wrapper.properties
分享材料/: 数据主义.md  数据主义.xmind
剑指offer学习笔记/: BinaryTree.java  剑指java.md
手机摄影/: 手机摄影.md
计算机网络/: 计算机网络一.md
读书笔记/: 人人都是产品经理.md
